--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
+    "path": "^0.12.7",
+    "pg": "^8.16.0",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2"
   }
