--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.5",
     "path": "^0.12.7",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7",
